--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  margin-top: 20px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -19,4 +20,8 @@
   flex-wrap: wrap;
   /* max-width: 800px; */
   justify-content: space-evenly;
+}
+
+.head {
+  margin: 0px;
 }
